# vs

./: .gitignore  AGENTS.md  Cargo.toml  README.md  skills-lock.json
.github/workflows/: ci.yml  docs-pages.yml  release.yml
crates/vs-cli/: Cargo.toml  README.md
crates/vs-cli/src/: cli.rs  install.rs  main.rs  output.rs  tui.rs
crates/vs-cli/src/command/: activate.rs  add.rs  available.rs  cd.rs  completion.rs  config.rs  current.rs  exec.rs  hook_env.rs  info.rs  install.rs  list.rs  migrate.rs  mod.rs  remove.rs  resolve.rs  search.rs  uninstall.rs  unuse.rs  update.rs  upgrade.rs  use_tool.rs  version.rs
crates/vs-cli/tests/: cli.rs
crates/vs-config/: Cargo.toml  README.md
crates/vs-config/src/: config_file.rs  home.rs  legacy.rs  lib.rs  project.rs  resolution.rs  types.rs
crates/vs-core/: Cargo.toml  README.md  build.rs
crates/vs-core/src/: app.rs  error.rs  lib.rs  models.rs  plugin_source.rs  registry_source.rs
crates/vs-core/src/service/: activate.rs  add.rs  available.rs  cd.rs  cleanup.rs  config.rs  current.rs  exec.rs  hook_env.rs  info.rs  install.rs  list.rs  migrate.rs  mod.rs  remove.rs  search.rs  uninstall.rs  unuse.rs  update.rs  upgrade.rs  use_tool.rs  version.rs
crates/vs-installer/: Cargo.toml  README.md
crates/vs-installer/src/: fs.rs  install.rs  lib.rs  receipt.rs
crates/vs-plugin-api/: Cargo.toml  README.md
crates/vs-plugin-api/src/: error.rs  host.rs  lib.rs  model.rs
crates/vs-plugin-lua/: Cargo.toml  README.md
crates/vs-plugin-lua/src/: backend.rs  lib.rs  loader.rs  model.rs  module.rs
crates/vs-plugin-lua/src/module/: archiver.rs  file.rs  html.rs  http.rs  json.rs  mod.rs  strings.rs
crates/vs-plugin-sdk/: Cargo.toml  README.md
crates/vs-plugin-sdk/src/: lib.rs
crates/vs-plugin-wasi/: Cargo.toml  README.md
crates/vs-plugin-wasi/src/: backend.rs  lib.rs
crates/vs-plugin-wasi/wit/: vs-plugin.wit
crates/vs-registry/: Cargo.toml  README.md
crates/vs-registry/src/: entry.rs  lib.rs  service.rs  store.rs
crates/vs-shell/: Cargo.toml  README.md
crates/vs-shell/src/: activate.rs  env.rs  lib.rs  link.rs  path.rs
crates/vs-test-support/: Cargo.toml  README.md
crates/vs-test-support/src/: fixture.rs  lib.rs  temp.rs
docs/: README.md  SUMMARY.md  next.config.mjs  package.json  pnpm-lock.yaml
docs/app/: layout.tsx
docs/app/(home)/: page.tsx
docs/app/og/docs/[...slug]/: route.tsx
docs/architecture/: workspace.md
docs/content/docs/: index.mdx  meta.json
docs/content/docs/guides/: configuration.mdx  index.mdx  meta.json  migration.mdx  quick-start.mdx
docs/content/docs/plugins/: index.mdx  lua-plugins.mdx  meta.json  native-plugins.mdx  overview.mdx
docs/content/docs/project/: index.mdx  meta.json  workspace-architecture.mdx
docs/content/docs/reference/: cli-commands.mdx  index.mdx  legacy-version-files.mdx  meta.json  shell-activation.mdx  shims-and-path.mdx
docs/guides/: configuration.md  migration.md  quick-start.md
docs/lib/: layout.shared.tsx  shared.ts
docs/plugins/: lua-plugins.md  native-plugins.md  overview.md
docs/usage/: core-commands.md  legacy-files.md  shell-activation.md  shims-and-path.md
fixtures/plugins/deno-wasi/: component.toml
fixtures/plugins/nodejs-lua/: metadata.lua
fixtures/plugins/nodejs-lua/hooks/: available.lua  env_keys.lua  pre_install.lua
fixtures/registry/: index.json
scripts/: install.ps1  install.sh
scripts/github-actions/: build_binary.sh  commit_release.sh  configure_musl.sh  generate_build_matrix.py  normalize_version.sh  package_unix.sh  package_windows.ps1  publish_crates.sh  push_commit_and_tag.sh  read_workspace_version.py  update_workspace_version.py
