[workspace]
members = ["crates/*"]
resolver = "2"

[workspace.package]
version = "0.0.2"
edition = "2024"
license = "MIT"
rust-version = "1.85"
repository = "https://github.com/unsdk/vs"
homepage = "https://github.com/unsdk/vs"

[workspace.dependencies]
anyhow = "1.0.100"
clap = { version = "4.5.39", default-features = false, features = ["derive", "help", "std", "usage"] }
clap_complete = "4.5.52"
dialoguer = { version = "0.12.0", default-features = false, features = ["fuzzy-select"] }
dirs = "6.0.0"
flate2 = "1.1.5"
fuzzy-matcher = "0.3.7"
indicatif = "0.18.0"
mlua = { version = "0.10.5", features = ["lua54", "serialize", "vendored"] }
md-5 = "0.10.6"
reqwest = { version = "0.12.24", default-features = false, features = ["blocking", "json", "rustls-tls"] }
regex = "1.11.1"
scraper = "0.24.0"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
serde_yaml = "0.9.34"
sha1 = "0.10.6"
sha2 = "0.10.9"
tempfile = "3.19.1"
tar = "0.4.44"
thiserror = "2.0.12"
toml = "0.8.20"
walkdir = "2.5.0"
xz2 = "0.1.7"
zip = { version = "2.4.2", default-features = false, features = ["deflate"] }
vs-cli = { version = "0.0.2", path = "crates/vs-cli" }
vs-config = { version = "0.0.2", path = "crates/vs-config" }
vs-core = { version = "0.0.2", path = "crates/vs-core", default-features = false }
vs-installer = { version = "0.0.2", path = "crates/vs-installer" }
vs-plugin-api = { version = "0.0.2", path = "crates/vs-plugin-api" }
vs-plugin-lua = { version = "0.0.2", path = "crates/vs-plugin-lua" }
vs-plugin-sdk = { version = "0.0.2", path = "crates/vs-plugin-sdk" }
vs-plugin-wasi = { version = "0.0.2", path = "crates/vs-plugin-wasi" }
vs-registry = { version = "0.0.2", path = "crates/vs-registry" }
vs-shell = { version = "0.0.2", path = "crates/vs-shell" }
vs-test-support = { version = "0.0.2", path = "crates/vs-test-support" }

[profile.release]
codegen-units = 1
lto = "thin"
strip = "symbols"

[profile.min-size]
inherits = "release"
lto = "fat"
opt-level = "z"
panic = "abort"

[workspace.lints.rust]
future-incompatible = "warn"
nonstandard-style = "deny"
rust-2018-idioms = "deny"
rust-2021-prelude-collisions = "deny"
unused-lifetimes = "deny"
unused-macro-rules = "warn"
unused-qualifications = "warn"

[workspace.lints.clippy]
all = { level = "deny", priority = 10 }
redundant_clone = { level = "deny", priority = 9 }
needless_collect = { level = "deny", priority = 9 }
unwrap_used = { level = "deny", priority = 9 }
expect_used = { level = "deny", priority = 9 }
