[package]
name = "vs-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[features]
default = ["lua", "wasi"]
lua = ["vs-core/lua"]
wasi = ["vs-core/wasi"]

[[bin]]
name = "vs"
path = "src/main.rs"

[dependencies]
anyhow.workspace = true
clap.workspace = true
clap_complete.workspace = true
dialoguer.workspace = true
vs-config = { path = "../vs-config" }
vs-core = { path = "../vs-core", default-features = false }
vs-plugin-api = { path = "../vs-plugin-api" }
vs-registry = { path = "../vs-registry" }

[dev-dependencies]
tempfile.workspace = true
vs-test-support = { path = "../vs-test-support" }

[lints]
workspace = true
