[package]
name = "vs-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
repository.workspace = true
homepage.workspace = true
description = "Command-line interface for the vs version manager."
readme = "README.md"

[features]
default = ["full"]
full = ["lua", "wasi"]
lua = ["vs-core/lua"]
wasi = ["vs-core/wasi"]

[[bin]]
name = "vs"
path = "src/main.rs"

[dependencies]
anyhow.workspace = true
clap.workspace = true
clap_complete.workspace = true
dialoguer.workspace = true
vs-config.workspace = true
vs-core.workspace = true
vs-plugin-api.workspace = true
vs-registry.workspace = true

[dev-dependencies]
tempfile.workspace = true
vs-test-support.workspace = true

[lints]
workspace = true
