[package]
name = "vs-config"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
repository.workspace = true
homepage.workspace = true
description = "Config and home resolution utilities for the vs runtime manager."
readme = "README.md"

[dependencies]
dirs.workspace = true
serde.workspace = true
serde_yaml.workspace = true
thiserror.workspace = true
toml.workspace = true

[dev-dependencies]
tempfile.workspace = true

[lints]
workspace = true
