[package]
name = "vs-core"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[features]
default = ["lua", "wasi"]
lua = ["dep:vs-plugin-lua"]
wasi = ["dep:vs-plugin-wasi"]

[dependencies]
anyhow.workspace = true
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
serde_yaml.workspace = true
tempfile.workspace = true
thiserror.workspace = true
vs-config = { path = "../vs-config" }
vs-installer = { path = "../vs-installer" }
vs-plugin-api = { path = "../vs-plugin-api" }
vs-plugin-lua = { path = "../vs-plugin-lua", optional = true }
vs-plugin-wasi = { path = "../vs-plugin-wasi", optional = true }
vs-registry = { path = "../vs-registry" }
vs-shell = { path = "../vs-shell" }
walkdir.workspace = true
zip.workspace = true

[dev-dependencies]
[lints]
workspace = true
