[package]
name = "vs-core"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
repository.workspace = true
homepage.workspace = true
description = "Core orchestration services for the vs version manager."
readme = "README.md"

[features]
default = ["full"]
full = ["lua", "wasi"]
lua = ["dep:vs-plugin-lua"]
wasi = ["dep:vs-plugin-wasi"]

[dependencies]
anyhow.workspace = true
flate2.workspace = true
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
serde_yaml.workspace = true
tar.workspace = true
tempfile.workspace = true
thiserror.workspace = true
vs-config.workspace = true
vs-installer.workspace = true
vs-plugin-api.workspace = true
vs-plugin-lua = { workspace = true, optional = true }
vs-plugin-wasi = { workspace = true, optional = true }
vs-registry.workspace = true
vs-shell.workspace = true
walkdir.workspace = true
zip.workspace = true

[dev-dependencies]
[lints]
workspace = true
