[package]
name = "vs-installer"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
serde.workspace = true
serde_json.workspace = true
tempfile.workspace = true
thiserror.workspace = true
vs-plugin-api = { path = "../vs-plugin-api" }
walkdir.workspace = true

[lints]
workspace = true
