[package]
name = "vs-installer"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
flate2.workspace = true
md-5.workspace = true
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
sha1.workspace = true
sha2.workspace = true
tar.workspace = true
tempfile.workspace = true
thiserror.workspace = true
vs-plugin-api = { path = "../vs-plugin-api" }
walkdir.workspace = true
xz2.workspace = true
zip.workspace = true

[lints]
workspace = true
