[package]
name = "vs-plugin-api"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
repository.workspace = true
homepage.workspace = true
description = "Shared plugin models and traits for the vs runtime manager."
readme = "README.md"

[dependencies]
serde.workspace = true
thiserror.workspace = true

[lints]
workspace = true
