[package]
name = "vs-plugin-lua"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
mlua.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
vs-plugin-api = { path = "../vs-plugin-api" }

[lints]
workspace = true
