[package]
name = "vs-plugin-lua"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
repository.workspace = true
homepage.workspace = true
description = "Lua-compatible plugin runtime for the vs version manager."
readme = "README.md"

[dependencies]
flate2.workspace = true
mlua.workspace = true
reqwest.workspace = true
scraper.workspace = true
serde.workspace = true
serde_json.workspace = true
tar.workspace = true
thiserror.workspace = true
vs-plugin-api.workspace = true
xz2.workspace = true
zip.workspace = true

[lints]
workspace = true
