[package]
name = "vs-plugin-sdk"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
repository.workspace = true
homepage.workspace = true
description = "SDK helpers for building vs native plugins."
readme = "README.md"

[dependencies]
serde.workspace = true
vs-plugin-api.workspace = true

[lints]
workspace = true
