[package]
name = "vs-registry"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
vs-plugin-api = { path = "../vs-plugin-api" }

[dev-dependencies]
tempfile.workspace = true

[lints]
workspace = true
