[package]
name = "vs-registry"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
repository.workspace = true
homepage.workspace = true
description = "Registry storage and lookup services for the vs version manager."
readme = "README.md"

[dependencies]
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
vs-plugin-api.workspace = true

[dev-dependencies]
tempfile.workspace = true

[lints]
workspace = true
