[package]
name = "vs-shell"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
repository.workspace = true
homepage.workspace = true
description = "Shell activation and path helpers for the vs runtime manager."
readme = "README.md"

[dependencies]
thiserror.workspace = true

[lints]
workspace = true
